--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "url": "git@https://github.com/Nishikinor/nishikinor.github.io"
   },
   "scripts": {
-    "build": "gatsby build --prefix-paths && gh-pages -d public master",
+    "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths  && gh-pages -d public master",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
